# HelloRealWorldWithROSUitgewerktV2

./: README.md  package.xml
compablity/turtlebot_gazebo/: package.xml
compablity/turtlebot_gazebo/launch/: amcl_demo.launch
compablity/turtlebot_teleop/: CMakeLists.txt  package.xml
hrwros/hrwros_week1/: package.xml
hrwros/hrwros_week1/scripts/: counter_with_delay_as.py  sensor_info_publisher.py  week1_assignment1.py  week1_assignment2.py
hrwros_factory_states/: package.xml
hrwros_gazebo/: package.xml
hrwros_gazebo/launch/: spawn_turtlebot.launch
hrwros_gazebo/src/: conveyor_spawner.cpp
hrwros_support/: package.xml
hrwros_support/config/: hrwros.rviz
hrwros_support/launch/: turtlebot3_navigation.launch
hrwros_utilities/: CMakeLists.txt  breakbeam_conveyor_stop.py  package.xml  timed_roslaunch.sh
hrwros_week2/launch/: visualize_hrwros_assignment1.launch  visualize_hrwros_assignment3.launch
hrwros_week2/urdf/: check.txt  hrwros_assignment1.urdf  hrwros_assignment1.xacro  hrwros_assignment2.xacro  hrwros_assignment3.xacro
hrwros_week3/: package.xml
hrwros_week3/launch/: hrwros_turtlebot_navigation.launch  hrwros_view_navigation.launch  launch_map.launch  start_all.launch
hrwros_week3/rviz/: hrwros_navigation.rviz  hrwros_navigation2.rviz
hrwros_week4/scripts/: week4_assignment2_script  week4_assignment3.py
hrwros_week5/launch/: spawn_turtlebot_week5.launch
hrwros_week6/launch/: hrwros_final_project.launch
install/: install.bash  install.bash.old
week4_moveit_config/config/: hrwros.srdf  kinematics.yaml
(+6 files in other folders)
